add get product list api
