# src/routes/productRoutes.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { addProduct, getProductsByCategory, updateProductById, deleteProductById } from '../controllers/productController.js';
+import { addProduct, getProductsByCategory, updateProductById, deleteProductById, getAllProducts } from '../controllers/productController.js';
 // import { addProductValidator } from '../utils/validation.js';
 import upload from '../utils/uploadImage.js';
 import { Auth } from '../middleware/auth.js';
@@ -8,7 +8,7 @@ const productRouter = express.Router();
 
 
 productRouter.post('/addProduct',Auth, upload.single('image'), addProduct);
-// productRouter.get('/productList', getProduct);
+productRouter.get('/productList', getAllProducts);
 productRouter.put('/updateProduct/:id', updateProductById);
 // productRouter.get('/productById/:id', getProductById)
 productRouter.delete('/delete/:id', deleteProductById);
